--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "install": "^0.13.0",
     "react": "^17.0.1",
+    "react-device-detect": "^1.15.0",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
+    "react-dnd-touch-backend": "^11.1.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.1",
     "react-scripts": "4.0.1",
